docs: Add dark mode - fix footer

--- a/docs/src/css/general.scss
+++ b/docs/src/css/general.scss
@@ -7,7 +7,6 @@ body {
   --ifm-color-success: rgb(64, 185, 255);
   --ifm-color-warning: #ED7200;
   --ifm-color-error: #C21B1B;
-  --ifm-footer-background-color: var(--ifm-color-secondary);
 }
 
 .embed-container {
